# bioviz-kit

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml  execute-notebooks.yml
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
examples/: diagnose_all_configs.py  diagnose_connectors.py  distribution_examples.py  explicit_with_labelcol.py  forest_plot_examples.ipynb  km_survival_example.py  minimal_bioviz_smoke.ipynb  minimal_bioviz_smoke.py  oncoplot_example.py  volcano_connector_demo.py  volcano_smoke.py
src/bioviz/: __init__.py  lineplot.py  oncoplot.py  plot_configs.py  plot_utils.py  spiderplot.py  style.py  table.py
src/bioviz/configs/: __init__.py  annotations_cfg.py  base_cfg.py  clinical_forest_cfg.py  distribution_cfg.py  forest_cfg.py  grouped_bar_cfg.py  km_cfg.py  line_cfg.py  oncoplot_annotations_cfg.py  oncoplot_cfg.py  scan_overlay_cfg.py  spider_cfg.py  table_cfg.py  volcano_cfg.py  waterfall_cfg.py  x_axis_annotation_overlay_cfg.py
src/bioviz/examples/: forest_plotter_example.py  km_plotter_example.py
src/bioviz/plot_composites/: __init__.py  grouped.py  volcano.py
src/bioviz/plots/: __init__.py  clinical_forest.py  distribution.py  forest.py  grouped.py  grouped_bar.py  km.py  (+9 more)
src/bioviz_kit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: run_smoke.py  test_legend_filtering.py  test_line_spider_smoke.py  test_lineplot_labels_and_overlay.py  test_oncoplot_smoke.py  test_preserve_x_categories.py  test_top_level_exports.py
(+4 files in other folders)
