[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "bioviz-kit"
version = "0.3.3"
description = "Framework-agnostic plotting utilities for biological and clinical data visualization"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Victoria Cheung", email = "victoriakcheung@gmail.com" } ]
requires-python = ">=3.11"

dependencies = [
	"pandas>=2.0",
	"matplotlib>=3.6",
	"seaborn>=0.12",
	"adjusttext>=0.8",
	"loguru>=0.7",
	"pydantic>=1.10,<3",
	"ipykernel>=7.1.0",
	"statsmodels>=0.14.6",
]

classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/vic-cheung/bioviz-kit"
"Issue Tracker" = "https://github.com/vic-cheung/bioviz-kit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
testing = ["pytest"]

[tool.uv]
dev-dependencies = [
	"ruff>=0.6",
	"pytest>=8.0",
	"build>=1.0",
	"twine>=4.0",
	"certifi>=2025.0",
]
